# GnomeKeyBinder

./: .gitignore  CMakeLists.txt  build.sh  custom keyboard bindings example  example commands.txt  output.txt  todo.txt
include/: DconfSettings.h  DconfSettings.h.txt  KeyBindManager.h  KeyBinder.h  Utilities.h
src/: KeyBinder.cpp  main.cpp
tests/: main_test.cpp
